[package]
name        = "yazi-cli"
version     = "26.1.22"
edition     = "2024"
license     = "MIT"
authors     = [ "sxyazi <sxyazi@gmail.com>" ]
description = "Yazi command-line interface"
homepage    = "https://yazi-rs.github.io"
repository  = "https://github.com/sxyazi/yazi"

[lints]
workspace = true

[profile.release]
codegen-units = 1
lto           = true
panic         = "abort"
strip         = true

[profile.release-windows]
inherits = "release"
panic    = "unwind"

[dependencies]
yazi-boot   = { path = "../yazi-boot", version = "26.1.22" }
yazi-dds    = { path = "../yazi-dds", version = "26.1.22" }
yazi-fs     = { path = "../yazi-fs", version = "26.1.22" }
yazi-macro  = { path = "../yazi-macro", version = "26.1.22" }
yazi-shared = { path = "../yazi-shared", version = "26.1.22" }
yazi-shim   = { path = "../yazi-shim", version = "26.1.22" }

# External dependencies
anyhow     = { workspace = true }
clap       = { workspace = true }
crossterm  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
toml       = { workspace = true }
twox-hash  = { workspace = true }

[build-dependencies]
yazi-shared = { path = "../yazi-shared", version = "26.1.22" }

# External build dependencies
anyhow                = { workspace = true }
clap                  = { workspace = true }
clap_complete         = "4.5.65"
clap_complete_fig     = "4.5.2"
clap_complete_nushell = "4.5.10"
serde                 = { workspace = true }
serde_json            = { workspace = true }
vergen-gitcl          = { version = "9.1.0", features = [ "build" ] }

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { workspace = true, features = [ "use-dev-tty", "libc" ] }

[[bin]]
name = "ya"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/yazi-{ target }{ archive-suffix }"
bin-dir = "yazi-{ target }/{ bin }{ binary-ext }"
