[package]
name                   = "yazi-cli"
description            = "Yazi command-line interface"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
yazi-adapter  = { path = "../yazi-adapter", version = "26.5.6" }
yazi-boot     = { path = "../yazi-boot", version = "26.5.6" }
yazi-config   = { path = "../yazi-config", version = "26.5.6" }
yazi-dds      = { path = "../yazi-dds", version = "26.5.6" }
yazi-emulator = { path = "../yazi-emulator", version = "26.5.6" }
yazi-fs       = { path = "../yazi-fs", version = "26.5.6" }
yazi-macro    = { path = "../yazi-macro", version = "26.5.6" }
yazi-shared   = { path = "../yazi-shared", version = "26.5.6" }
yazi-term     = { path = "../yazi-term", version = "26.5.6" }
yazi-tty      = { path = "../yazi-tty", version = "26.5.6" }
yazi-version  = { path = "../yazi-version", version = "26.5.6" }

# External dependencies
anyhow     = { workspace = true }
clap       = { workspace = true }
hashbrown  = { workspace = true }
regex      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
toml       = { workspace = true }
twox-hash  = { workspace = true }

[build-dependencies]
yazi-shared = { path = "../yazi-shared", version = "26.5.6" }

# External build dependencies
anyhow                = { workspace = true }
clap                  = { workspace = true }
clap_complete         = "4.6.5"
clap_complete_fig     = "4.5.2"
clap_complete_nushell = "4.6.0"
serde                 = { workspace = true }
serde_json            = { workspace = true }

[[bin]]
name = "ya"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/yazi-{ target }{ archive-suffix }"
bin-dir = "yazi-{ target }/{ bin }{ binary-ext }"
