[package]
name                   = "yazi-codegen"
description            = "Yazi code generator"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
# External dependencies
proc-macro2 = "1"
quote       = "1.0.45"
syn         = { version = "2.0.117", features = [ "full" ] }
