[package]
name        = "yazi-config"
version     = "26.1.4"
edition     = "2024"
license     = "MIT"
authors     = [ "sxyazi <sxyazi@gmail.com>" ]
description = "Yazi configuration file parser"
homepage    = "https://yazi-rs.github.io"
repository  = "https://github.com/sxyazi/yazi"

[lints]
workspace = true

[dependencies]
yazi-codegen = { path = "../yazi-codegen", version = "26.1.4" }
yazi-fs      = { path = "../yazi-fs", version = "26.1.4" }
yazi-macro   = { path = "../yazi-macro", version = "26.1.4" }
yazi-shared  = { path = "../yazi-shared", version = "26.1.4" }
yazi-term    = { path = "../yazi-term", version = "26.1.4" }

# External dependencies
anyhow    = { workspace = true }
bitflags  = { workspace = true }
crossterm = { workspace = true }
dirs      = { workspace = true }
globset   = { workspace = true }
hashbrown = { workspace = true }
indexmap  = { workspace = true }
ratatui   = { workspace = true }
regex     = { workspace = true }
serde     = { workspace = true }
tokio     = { workspace = true }
toml      = { workspace = true }
tracing   = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { workspace = true, features = [ "use-dev-tty", "libc" ] }
