[package]
name        = "yazi-core"
version     = "26.1.4"
edition     = "2024"
license     = "MIT"
authors     = [ "sxyazi <sxyazi@gmail.com>" ]
description = "Yazi core logic"
homepage    = "https://yazi-rs.github.io"
repository  = "https://github.com/sxyazi/yazi"

[lints]
workspace = true

[dependencies]
yazi-adapter   = { path = "../yazi-adapter", version = "26.1.4" }
yazi-config    = { path = "../yazi-config", version = "26.1.4" }
yazi-dds       = { path = "../yazi-dds", version = "26.1.4" }
yazi-fs        = { path = "../yazi-fs", version = "26.1.4" }
yazi-macro     = { path = "../yazi-macro", version = "26.1.4" }
yazi-parser    = { path = "../yazi-parser", version = "26.1.4" }
yazi-plugin    = { path = "../yazi-plugin", version = "26.1.4" }
yazi-proxy     = { path = "../yazi-proxy", version = "26.1.4" }
yazi-scheduler = { path = "../yazi-scheduler", version = "26.1.4" }
yazi-shared    = { path = "../yazi-shared", version = "26.1.4" }
yazi-vfs       = { path = "../yazi-vfs", version = "26.1.4" }
yazi-watcher   = { path = "../yazi-watcher", version = "26.1.4" }
yazi-widgets   = { path = "../yazi-widgets", version = "26.1.4" }

# External dependencies
anyhow        = { workspace = true }
crossterm     = { workspace = true }
hashbrown     = { workspace = true }
indexmap      = { workspace = true }
parking_lot   = { workspace = true }
ratatui       = { workspace = true }
tokio         = { workspace = true }
tokio-stream  = { workspace = true }
tokio-util    = { workspace = true }
tracing       = { workspace = true }
unicode-width = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { workspace = true, features = [ "use-dev-tty", "libc" ] }
