[package]
name                   = "yazi-core"
description            = "Yazi core logic"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default      = [ "vendored-lua" ]
vendored-lua = [ "mlua/vendored" ]

[dependencies]
yazi-adapter   = { path = "../yazi-adapter", version = "26.2.2" }
yazi-binding   = { path = "../yazi-binding", version = "26.2.2" }
yazi-config    = { path = "../yazi-config", version = "26.2.2" }
yazi-dds       = { path = "../yazi-dds", version = "26.2.2" }
yazi-emulator  = { path = "../yazi-emulator", version = "26.2.2" }
yazi-fs        = { path = "../yazi-fs", version = "26.2.2" }
yazi-macro     = { path = "../yazi-macro", version = "26.2.2" }
yazi-runner    = { path = "../yazi-runner", version = "26.2.2" }
yazi-scheduler = { path = "../yazi-scheduler", version = "26.2.2" }
yazi-shared    = { path = "../yazi-shared", version = "26.2.2" }
yazi-shim      = { path = "../yazi-shim", version = "26.2.2" }
yazi-vfs       = { path = "../yazi-vfs", version = "26.2.2" }
yazi-watcher   = { path = "../yazi-watcher", version = "26.2.2" }
yazi-widgets   = { path = "../yazi-widgets", version = "26.2.2" }

# External dependencies
anyhow        = { workspace = true }
crossterm     = { workspace = true }
dyn-clone     = { workspace = true }
hashbrown     = { workspace = true }
indexmap      = { workspace = true }
mlua          = { workspace = true }
parking_lot   = { workspace = true }
ratatui       = { workspace = true }
serde         = { workspace = true }
serde_with    = { workspace = true }
strum         = { workspace = true }
syntect       = { workspace = true }
tokio         = { workspace = true }
tokio-stream  = { workspace = true }
tokio-util    = { workspace = true }
tracing       = { workspace = true }
unicode-width = { workspace = true }
yazi-prebuilt = "0.1.0"

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { workspace = true, features = [ "use-dev-tty", "libc" ] }
