[package]
name        = "yazi-dds"
version     = "26.1.4"
edition     = "2024"
license     = "MIT"
authors     = [ "sxyazi <sxyazi@gmail.com>" ]
description = "Yazi data distribution service"
homepage    = "https://yazi-rs.github.io"
repository  = "https://github.com/sxyazi/yazi"

[lints]
workspace = true

[features]
default      = [ "vendored-lua" ]
vendored-lua = [ "mlua/vendored" ]

[dependencies]
yazi-binding = { path = "../yazi-binding", version = "26.1.4" }
yazi-boot    = { path = "../yazi-boot", version = "26.1.4" }
yazi-fs      = { path = "../yazi-fs", version = "26.1.4" }
yazi-macro   = { path = "../yazi-macro", version = "26.1.4" }
yazi-parser  = { path = "../yazi-parser", version = "26.1.4" }
yazi-shared  = { path = "../yazi-shared", version = "26.1.4" }

# External dependencies
anyhow        = { workspace = true }
hashbrown     = { workspace = true }
mlua          = { workspace = true }
ordered-float = { workspace = true }
parking_lot   = { workspace = true }
paste         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
tokio-stream  = { workspace = true }
tracing       = { workspace = true }

[build-dependencies]
vergen-gitcl = { version = "1.0.8", features = [ "build" ] }

[target."cfg(unix)".dependencies]
uzers = { workspace = true }
