[package]
name                   = "yazi-dds"
description            = "Yazi data distribution service"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default      = [ "vendored-lua" ]
vendored-lua = [ "mlua/vendored" ]

[dependencies]
yazi-binding = { path = "../yazi-binding", version = "26.2.2" }
yazi-boot    = { path = "../yazi-boot", version = "26.2.2" }
yazi-fs      = { path = "../yazi-fs", version = "26.2.2" }
yazi-macro   = { path = "../yazi-macro", version = "26.2.2" }
yazi-shared  = { path = "../yazi-shared", version = "26.2.2" }

# External dependencies
anyhow        = { workspace = true }
hashbrown     = { workspace = true }
indexmap      = { workspace = true }
mlua          = { workspace = true }
ordered-float = { workspace = true }
parking_lot   = { workspace = true }
paste         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
tokio-stream  = { workspace = true }
tracing       = { workspace = true }

[build-dependencies]
vergen-gitcl = { version = "9.1.0", features = [ "build" ] }

[target."cfg(unix)".dependencies]
uzers = { workspace = true }
