[package]
name        = "yazi-emulator"
version     = "26.1.22"
edition     = "2024"
license     = "MIT"
authors     = [ "sxyazi <sxyazi@gmail.com>" ]
description = "Yazi terminal emulator database"
homepage    = "https://yazi-rs.github.io"
repository  = "https://github.com/sxyazi/yazi"

[lints]
workspace = true

[dependencies]
yazi-macro  = { path = "../yazi-macro", version = "26.1.22" }
yazi-shared = { path = "../yazi-shared", version = "26.1.22" }
yazi-tty    = { path = "../yazi-tty", version = "26.1.22" }

# External dependencies
anyhow     = { workspace = true }
crossterm  = { workspace = true }
either     = { workspace = true }
scopeguard = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { workspace = true, features = [ "use-dev-tty", "libc" ] }
