[package]
name                   = "yazi-emulator"
description            = "Yazi terminal emulator database"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
yazi-macro  = { path = "../yazi-macro", version = "26.2.2" }
yazi-shared = { path = "../yazi-shared", version = "26.2.2" }
yazi-shim   = { path = "../yazi-shim", version = "26.2.2" }
yazi-tty    = { path = "../yazi-tty", version = "26.2.2" }

# External dependencies
anyhow     = { workspace = true }
crossterm  = { workspace = true }
either     = { workspace = true }
scopeguard = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { workspace = true, features = [ "use-dev-tty", "libc" ] }
