[package]
name                   = "yazi-ffi"
description            = "Yazi foreign function interface"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
yazi-macro = { path = "../yazi-macro", version = "26.2.2" }

# External dependencies
anyhow = { workspace = true }

[target."cfg(unix)".dependencies]
libc = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation-sys = { workspace = true }
objc2               = { workspace = true }
