[package]
name        = "yazi-fm"
version     = "25.9.15"
edition     = "2024"
license     = "MIT"
authors     = [ "sxyazi <sxyazi@gmail.com>" ]
description = "Yazi file manager"
homepage    = "https://yazi-rs.github.io"
repository  = "https://github.com/sxyazi/yazi"

[profile.release]
codegen-units = 1
lto           = true
panic         = "abort"
strip         = true

[profile.release-windows]
inherits = "release"
panic    = "unwind"

[features]
default      = [ "vendored-lua" ]
vendored-lua = [ "mlua/vendored" ]

[dependencies]
yazi-actor   = { path = "../yazi-actor", version = "25.9.15" }
yazi-adapter = { path = "../yazi-adapter", version = "25.9.15" }
yazi-binding = { path = "../yazi-binding", version = "25.9.15" }
yazi-boot    = { path = "../yazi-boot", version = "25.9.15" }
yazi-config  = { path = "../yazi-config", version = "25.9.15" }
yazi-core    = { path = "../yazi-core", version = "25.9.15" }
yazi-dds     = { path = "../yazi-dds", version = "25.9.15" }
yazi-fs      = { path = "../yazi-fs", version = "25.9.15" }
yazi-macro   = { path = "../yazi-macro", version = "25.9.15" }
yazi-parser  = { path = "../yazi-parser", version = "25.9.15" }
yazi-plugin  = { path = "../yazi-plugin", version = "25.9.15" }
yazi-proxy   = { path = "../yazi-proxy", version = "25.9.15" }
yazi-shared  = { path = "../yazi-shared", version = "25.9.15" }
yazi-term    = { path = "../yazi-term", version = "25.9.15" }
yazi-vfs     = { path = "../yazi-vfs", version = "25.9.15" }
yazi-watcher = { path = "../yazi-watcher", version = "25.9.15" }
yazi-widgets = { path = "../yazi-widgets", version = "25.9.15" }

# External dependencies
anyhow       = { workspace = true }
better-panic = "0.3.0"
crossterm    = { workspace = true }
fdlimit      = "0.3.0"
futures      = { workspace = true }
mlua         = { workspace = true }
paste        = { workspace = true }
ratatui      = { workspace = true }
scopeguard   = { workspace = true }
tokio        = { workspace = true }
tokio-stream = { workspace = true }

# Logging
tracing            = { workspace = true }
tracing-appender   = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = [ "env-filter" ] }

[target."cfg(unix)".dependencies]
libc              = { workspace = true }
signal-hook-tokio = { version = "0.3.1", features = [ "futures-v0_3" ] }

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { workspace = true, features = [ "use-dev-tty", "libc" ] }

[target.'cfg(all(not(target_os = "macos"), not(target_os = "windows")))'.dependencies]
tikv-jemallocator = "0.6.0"

[[bin]]
name = "yazi"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{repo}/releases/download/v{version}/yazi-{target}{archive-suffix}"
bin-dir = "yazi-{target}/{bin}{binary-ext}"
