[package]
name        = "yazi-fm"
version     = "26.1.4"
edition     = "2024"
license     = "MIT"
authors     = [ "sxyazi <sxyazi@gmail.com>" ]
description = "Yazi file manager"
homepage    = "https://yazi-rs.github.io"
repository  = "https://github.com/sxyazi/yazi"

[lints]
workspace = true

[profile.release]
codegen-units = 1
lto           = true
panic         = "abort"
strip         = true

[profile.release-windows]
inherits = "release"
panic    = "unwind"

[features]
default      = [ "vendored-lua" ]
vendored-lua = [ "mlua/vendored" ]

[dependencies]
yazi-actor   = { path = "../yazi-actor", version = "26.1.4" }
yazi-adapter = { path = "../yazi-adapter", version = "26.1.4" }
yazi-binding = { path = "../yazi-binding", version = "26.1.4" }
yazi-boot    = { path = "../yazi-boot", version = "26.1.4" }
yazi-config  = { path = "../yazi-config", version = "26.1.4" }
yazi-core    = { path = "../yazi-core", version = "26.1.4" }
yazi-dds     = { path = "../yazi-dds", version = "26.1.4" }
yazi-fs      = { path = "../yazi-fs", version = "26.1.4" }
yazi-macro   = { path = "../yazi-macro", version = "26.1.4" }
yazi-parser  = { path = "../yazi-parser", version = "26.1.4" }
yazi-plugin  = { path = "../yazi-plugin", version = "26.1.4" }
yazi-proxy   = { path = "../yazi-proxy", version = "26.1.4" }
yazi-shared  = { path = "../yazi-shared", version = "26.1.4" }
yazi-term    = { path = "../yazi-term", version = "26.1.4" }
yazi-vfs     = { path = "../yazi-vfs", version = "26.1.4" }
yazi-watcher = { path = "../yazi-watcher", version = "26.1.4" }
yazi-widgets = { path = "../yazi-widgets", version = "26.1.4" }

# External dependencies
anyhow       = { workspace = true }
better-panic = "0.3.0"
crossterm    = { workspace = true }
fdlimit      = "0.3.0"
futures      = { workspace = true }
mlua         = { workspace = true }
paste        = { workspace = true }
ratatui      = { workspace = true }
scopeguard   = { workspace = true }
tokio        = { workspace = true }
tokio-stream = { workspace = true }

# Logging
tracing            = { workspace = true }
tracing-appender   = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = [ "env-filter" ] }

[target."cfg(unix)".dependencies]
libc              = { workspace = true }
signal-hook-tokio = { version = "0.4.0", features = [ "futures-v0_3" ] }

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { workspace = true, features = [ "use-dev-tty", "libc" ] }

[target.'cfg(all(not(target_os = "macos"), not(target_os = "windows")))'.dependencies]
tikv-jemallocator = "0.6.1"

[[bin]]
name = "yazi"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{repo}/releases/download/v{version}/yazi-{target}{archive-suffix}"
bin-dir = "yazi-{target}/{bin}{binary-ext}"
