[package]
name                   = "yazi-fs"
description            = "Yazi file system"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
yazi-binding = { path = "../yazi-binding", version = "26.5.6" }
yazi-ffi     = { path = "../yazi-ffi", version = "26.5.6" }
yazi-macro   = { path = "../yazi-macro", version = "26.5.6" }
yazi-shared  = { path = "../yazi-shared", version = "26.5.6" }
yazi-shim    = { path = "../yazi-shim", version = "26.5.6" }

# External dependencies
anyhow           = { workspace = true }
arc-swap         = { workspace = true }
bitflags         = { workspace = true }
data-encoding    = { workspace = true }
dirs             = { workspace = true }
either           = { workspace = true }
foldhash         = { workspace = true }
hashbrown        = { workspace = true }
inventory        = { workspace = true }
libc             = { workspace = true }
mlua             = { workspace = true }
parking_lot      = { workspace = true }
rand             = { workspace = true }
regex            = { workspace = true }
scopeguard       = { workspace = true }
serde            = { workspace = true }
serde_with       = { workspace = true }
strum            = { workspace = true }
tokio            = { workspace = true }
tracing          = { workspace = true }
typed-path       = { workspace = true }

[target."cfg(unix)".dependencies]
uzers = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows     = { version = "0.62.2", features = [ "Win32_Foundation", "Win32_Storage_EnhancedStorage", "Win32_System_Com_StructuredStorage", "Win32_System_SystemServices", "Win32_UI_Shell_PropertiesSystem" ] }
windows-sys = { version = "0.61.2", features = [ "Win32_Storage_FileSystem" ] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation-sys = { workspace = true }
ds_parser           = "0.2.1"
objc2               = { workspace = true }

[target.'cfg(not(target_os = "android"))'.dependencies]
trash = "5.2.6"
