[package]
name        = "yazi-macro"
version     = "0.3.3"
edition     = "2021"
license     = "MIT"
authors     = [ "sxyazi <sxyazi@gmail.com>" ]
description = "Yazi macros"
homepage    = "https://yazi-rs.github.io"
repository  = "https://github.com/sxyazi/yazi"

[lib]
proc-macro = true

[dependencies]
# External dependencies
syn   = "2.0.79"
quote = "1.0.37"
