[package]
name                   = "yazi-macro"
description            = "Yazi macros"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true
