[package]
name        = "yazi-packing"
version     = "25.5.28"
edition     = "2024"
license     = "MIT"
authors     = [ "sxyazi <sxyazi@gmail.com>" ]
description = "Yazi packing"
homepage    = "https://yazi-rs.github.io"
repository  = "https://github.com/sxyazi/yazi"

	[package.metadata.deb]
	name                      = "yazi"
	license-file              = [ "../LICENSE", "0" ]
	depends                   = "file, ffmpeg, 7zip, jq, poppler-utils, fd-find, ripgrep, fzf, zoxide, imagemagick, xsel|xclip|wl-clipboard"
	recommends                = "bash-completion"
	extended-description-file = "README.md"
	section                   = "utility"
	priority                  = "optional"
	assets                    = [
		[ "target/release/ya", "usr/bin/", "755" ],
		[ "target/release/yazi", "usr/bin/", "755" ],
		[ "../README.md",  "usr/share/doc/yazi/README", "644" ],
		[ "../yazi-cli/completions/ya.bash", "usr/share/bash-completion/completions/ya", "644" ],
		[ "../yazi-boot/completions/yazi.bash", "usr/share/bash-completion/completions/yazi", "644" ],
	]
