[package]
name        = "yazi-parser"
version     = "26.1.4"
edition     = "2024"
license     = "MIT"
authors     = [ "sxyazi <sxyazi@gmail.com>" ]
description = "Yazi command parser"
homepage    = "https://yazi-rs.github.io"
repository  = "https://github.com/sxyazi/yazi"

[lints]
workspace = true

[features]
default      = [ "vendored-lua" ]
vendored-lua = [ "mlua/vendored" ]

[dependencies]
yazi-binding = { path = "../yazi-binding", version = "26.1.4" }
yazi-boot    = { path = "../yazi-boot", version = "26.1.4" }
yazi-config  = { path = "../yazi-config", version = "26.1.4" }
yazi-fs      = { path = "../yazi-fs", version = "26.1.4" }
yazi-macro   = { path = "../yazi-macro", version = "26.1.4" }
yazi-shared  = { path = "../yazi-shared", version = "26.1.4" }
yazi-vfs     = { path = "../yazi-vfs", version = "26.1.4" }

# External dependencies
anyhow        = { workspace = true }
bitflags      = { workspace = true }
crossterm     = { workspace = true }
hashbrown     = { workspace = true }
mlua          = { workspace = true }
ordered-float = { workspace = true }
serde         = { workspace = true }
tokio         = { workspace = true }
