[package]
name                   = "yazi-parser"
description            = "Yazi form parser"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
homepage.workspace     = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default      = [ "vendored-lua" ]
vendored-lua = [ "mlua/vendored" ]

[dependencies]
yazi-binding   = { path = "../yazi-binding", version = "26.2.2" }
yazi-boot      = { path = "../yazi-boot", version = "26.2.2" }
yazi-config    = { path = "../yazi-config", version = "26.2.2" }
yazi-core      = { path = "../yazi-core", version = "26.2.2" }
yazi-dds       = { path = "../yazi-dds", version = "26.2.2" }
yazi-fs        = { path = "../yazi-fs", version = "26.2.2" }
yazi-macro     = { path = "../yazi-macro", version = "26.2.2" }
yazi-scheduler = { path = "../yazi-scheduler", version = "26.2.2" }
yazi-shared    = { path = "../yazi-shared", version = "26.2.2" }
yazi-vfs       = { path = "../yazi-vfs", version = "26.2.2" }
yazi-widgets   = { path = "../yazi-widgets", version = "26.2.2" }

# External dependencies
anyhow     = { workspace = true }
bitflags   = { workspace = true }
crossterm  = { workspace = true }
hashbrown  = { workspace = true }
mlua       = { workspace = true }
paste      = { workspace = true }
ratatui    = { workspace = true }
serde      = { workspace = true }
serde_with = { workspace = true }
strum      = { workspace = true }
tokio      = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { workspace = true, features = [ "use-dev-tty", "libc" ] }
